[metadata]
name = emqx_pre_commit_hooks
version = 0.1.0
description = EMQX pre-commit hooks
url = https://github.com/savonarola/emqx-pre-commit-hooks
author = Ilia Averianov
author_email = av@rubybox.dev

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-date = emqx_pre_commit_hooks.check_date:main

[bdist_wheel]
universal = True
